--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
         <br>
 
-        <button onclick="togglePopup()">show popup</button>
-        <div class="popUpcontent">
-            <div onclick="togglePopup()" class="close-btn"></div>
+        <button onclick="togglePopup()" id="showPopupBtn"></button>
+        <div class="popUpcontent" style="display: none;">
+            <div class="close-btn"></div>
             <h3 id="popupHeader">Choose 5 Coins to Reports</h3>
             <div class='cardsContainer'>
                 <!-- 1 -->
-                <div class='cardContainer'>
+                <!-- <div class='cardContainer'>
                     <div class='imgContainer'>
                         <h5>BTC</h5>
                         <h5>Bitcoin</h5>
@@ -69,9 +69,9 @@
                             </label>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- 2 -->
-                <div class='cardContainer'>
+                <!-- <div class='cardContainer'>
                     <div class='imgContainer'>
                         <h5>BTC</h5>
                         <h5>Bitcoin</h5>
@@ -95,7 +95,7 @@
                             </label>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
 
