--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body onload="setSwitchStatus()">
+<body onload="setSwitchStatusOn()">
     <div class='App'>
         <div class="navContainer">
             <div class="navLogo">
@@ -47,7 +47,7 @@
             
                 </div>
                 <div id="btnContainer">
-                    <button type="button" class="btn btn-outline-info">Finish</button>
+                    <button id="cancelBtn" type="button" class="btn btn-outline-info">Cancel</button>
                 </div>
             </div>
         </div>
