--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body onload="setSwitchStatusOn()">
+<body>
     <div class='App'>
         <div class="navContainer">
             <div class="navLogo">
@@ -36,6 +36,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <br>
+        <div id="alertBox" hidden class="alert alert-danger" role="alert">
+            coin not exist!
         </div>
         <br>
         <button onclick="togglePopup()" id="showPopupBtn"></button>
