--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
         </div>
         <br>
-        <div id="alertBox" hidden class="alert alert-danger" role="alert">
-            coin not exist!
+        <div id="alertBox" hidden class="alert alert-warning " role="alert">
         </div>
+        <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
         <br>
         <button onclick="togglePopup()" id="showPopupBtn"></button>
         <div class="popUpcontentContainer">
